<resources>
    <string name="app_name">MediaUtil</string>
    <string name="codec_info">%1$s:%2$s</string>
    <string name="codec_info_title">解码器参数</string>
    <string name="video_codec_info_title">视频解码器参数</string>
    <string name="audio_codec_info_title">音频解码器参数</string>
    <string name="encoder_codec_info_title">编码器参数</string>
    <string name="choose">选择文件</string>
    <string name="parse">解析</string>
    <string name="yuv_edit_hint">请选择文件</string>
    <string name="decodec_type">解码方式:</string>
    <string name="hardware_codec">硬解</string>
    <string name="ffmpeg_codec">软解</string>
    <string name="yuv_codec_name">编码类型</string>
    <string name="hint_width">请输入宽度</string>
    <string name="hint_height">请输入高度</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="show_type">展示数据</string>
    <string name="encode_type">编码方式</string>
    <string name="data_transmission_type">数据传输方式</string>
    <string name="channel_layout">声道数</string>
    <string name="sample_rate">采样率</string>
    <string name="encode">编码</string>
    <string name="api_type">API</string>
    <string name="eccodec_format">编码格式</string>
    <string name="pause_to_choose_encodec_format">点击选择编码格式</string>
    <string name="encodec_name">编码器名</string>
    <string name="pause_to_choose_encodec">点击选择编码器</string>
    <string name="advanced_settings">高级设置</string>
    <string name="level">级别</string>
    <string name="pause_to_choose_level">点击选择编码级别</string>
    <string name="write_adts">写入ADTS</string>
    <string name="xml_false">否</string>
    <string name="xml_true">是</string>
</resources>