<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EncodeAudioActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <include
        android:id="@+id/encode_audio_choose_path_layout"
        layout="@layout/layout_choose_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/encode_audio_mode_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode_type"
        app:layout_constraintStart_toStartOf="@+id/encode_audio_choose_path_layout"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_choose_path_layout" />

    <Spinner
        android:id="@+id/encode_audio_mode_spinner"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/codec_mode_arr"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_mode_tv"
        app:layout_constraintEnd_toStartOf="@+id/encode_audio_data_mode_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_mode_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_mode_tv" />

    <TextView
        android:id="@+id/encode_audio_mutex_type_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eccodec_format"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_choose_path_layout" />

    <Button
        android:id="@+id/encode_audio_choose_format_btn"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:background="@color/transparent"
        android:text="@string/pause_to_choose_encodec_format"
        app:layout_constraintBottom_toTopOf="@+id/encode_audio_sampleRate_tv"
        app:layout_constraintEnd_toEndOf="@+id/encode_audio_choose_path_layout"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_mutex_type_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_mutex_type_tv" />

    <TextView
        android:id="@+id/encode_audio_data_mode_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_type"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_choose_codec_tv"
        app:layout_constraintStart_toStartOf="@+id/encode_audio_channelLayout_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_choose_codec_tv" />

    <Spinner
        android:id="@+id/encode_audio_data_mode_spinner"
        android:layout_width="164dp"
        android:layout_height="29dp"
        android:entries="@array/data_transmission_arr"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_data_mode_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_data_mode_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_data_mode_tv" />

    <TextView
        android:id="@+id/encode_audio_channelLayout_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_layout"
        app:layout_constraintStart_toStartOf="@+id/encode_audio_mode_tv"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_mode_spinner" />

    <Spinner
        android:id="@+id/encode_audio_channelLayout_spinner"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:entries="@array/channel_layout_arr"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_channelLayout_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_channelLayout_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_channelLayout_tv" />

    <TextView
        android:id="@+id/encode_audio_sampleRate_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_rate"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_channelLayout_spinner"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_mutex_type_tv" />

    <Spinner
        android:id="@+id/encode_audio_sampleRate_spinner"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:entries="@array/sample_rate_arr"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_sampleRate_tv"
        app:layout_constraintEnd_toEndOf="@+id/encode_audio_choose_format_btn"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_sampleRate_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_sampleRate_tv" />


    <TextView
        android:id="@+id/encode_audio_choose_codec_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/encodec_name"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_advanced_settings" />

    <Button
        android:id="@+id/encode_audio_choose_codec_btn"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:background="@color/transparent"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/pause_to_choose_encodec"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_choose_codec_tv"
        app:layout_constraintEnd_toEndOf="@+id/encode_audio_sampleRate_spinner"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_choose_codec_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_choose_codec_tv" />


    <Button
        android:id="@+id/encode_audio_parse_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/encode"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/encode_audio_choose_codec_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/encode_audio_data_mode_tv"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_choose_level_btn" />

    <TextView
        android:id="@+id/encode_audio_advanced_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:text="@string/advanced_settings"
        android:textColor="@color/tianyi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_sampleRate_spinner" />

    <TextView
        android:id="@+id/encode_audio_choose_level_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/level"
        app:layout_constraintStart_toStartOf="@+id/encode_audio_data_mode_tv"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_data_mode_tv" />

    <Button
        android:id="@+id/encode_audio_choose_level_btn"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:background="@color/transparent"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/pause_to_choose_level"
        app:layout_constraintEnd_toStartOf="@+id/encode_audio_choose_level_help"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_choose_level_tv"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_data_mode_spinner" />

    <ImageView
        android:id="@+id/encode_audio_choose_level_help"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/help"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_choose_level_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_choose_level_btn" />

    <TextView
        android:id="@+id/encode_audio_write_adts_tv"
        style="@style/CodecInfoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/write_adts"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/encode_audio_choose_codec_btn" />

    <RadioGroup
        android:id="@+id/encode_audio_write_adts_rg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/encode_audio_write_adts_tv"
        app:layout_constraintEnd_toEndOf="@+id/encode_audio_choose_codec_btn"
        app:layout_constraintStart_toEndOf="@+id/encode_audio_write_adts_tv"
        app:layout_constraintTop_toTopOf="@+id/encode_audio_write_adts_tv">

        <RadioButton
            android:id="@+id/encode_audio_write_adts_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/xml_true" />

        <RadioButton
            android:id="@+id/encode_audio_write_adts_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xml_false" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>