<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".YUVActivity">

    <include
        android:id="@+id/yuv_choose_path_layout"
        layout="@layout/layout_choose_file"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yuv_codec_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/yuv_codec_name"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_codec_name_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yuv_codec_name_spinner" />

    <Spinner
        android:id="@+id/yuv_codec_name_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/codec_name_arr"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_codec_name_help"
        app:layout_constraintEnd_toStartOf="@+id/yuv_codec_name_help"
        app:layout_constraintStart_toEndOf="@+id/yuv_codec_name_tv"
        app:layout_constraintTop_toTopOf="@+id/yuv_codec_name_help" />

    <ImageView
        android:id="@+id/yuv_codec_name_help"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:src="@drawable/help"
        app:layout_constraintEnd_toEndOf="@+id/yuv_choose_path_layout"
        app:layout_constraintTop_toBottomOf="@+id/yuv_choose_path_layout" />

    <TextView
        android:id="@+id/yuv_codec_name_width_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/width"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_codec_name_width_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yuv_codec_name_width_et" />

    <EditText
        android:id="@+id/yuv_codec_name_width_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_width"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/yuv_codec_name_width_tv"
        app:layout_constraintTop_toBottomOf="@+id/yuv_codec_name_spinner" />

    <TextView
        android:id="@+id/yuv_codec_name_height_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_codec_name_height_et"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/yuv_codec_name_height_et" />

    <EditText
        android:id="@+id/yuv_codec_name_height_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_height"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/yuv_codec_name_help"
        app:layout_constraintStart_toEndOf="@+id/yuv_codec_name_height_tv"
        app:layout_constraintTop_toBottomOf="@+id/yuv_codec_name_help" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/yuv_parse_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/mediumseagreen"
        android:text="@string/parse"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/yuv_codec_name_height_et"
        app:layout_constraintStart_toStartOf="@+id/yuv_codec_name_width_tv"
        app:layout_constraintTop_toBottomOf="@+id/yuv_codec_name_width_et" />

    <ImageView
        android:id="@+id/yuv_frame_front"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/front"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_frame_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuv_parse_btn" />

    <android.opengl.GLSurfaceView
        android:id="@+id/yuv_frame_data"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yuv_frame_rv"
        app:layout_constraintEnd_toStartOf="@+id/yuv_frame_behind"
        app:layout_constraintStart_toEndOf="@+id/yuv_frame_front"
        app:layout_constraintTop_toBottomOf="@+id/yuv_show_type_spinner" />

    <ImageView
        android:id="@+id/yuv_frame_behind"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_frame_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuv_parse_btn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/yuv_frame_rv"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yuv_show_type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/show_type"
        app:layout_constraintBottom_toBottomOf="@+id/yuv_show_type_spinner"
        app:layout_constraintStart_toStartOf="@+id/yuv_parse_btn"
        app:layout_constraintTop_toTopOf="@+id/yuv_show_type_spinner" />

    <Spinner
        android:id="@+id/yuv_show_type_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/show_type_arr"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/yuv_show_type"
        app:layout_constraintTop_toBottomOf="@+id/yuv_parse_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>